Updated upload and auth
